force-app/main/default/objects/VS_ScenarioPlan__c/VS_ScenarioPlan__c.object-meta.xml
<CustomObject>
    <description>시나리오 상세 정보를 관리하는 obj로 수익성 결과 정보도 포함 한다.</description>
    <label>ScenarioPlan</label>
    <nameField>
        <displayFormat>ScP-{0000000000}</displayFormat>
        <label>ScenarioPlan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScenarioPlans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>