force-app/main/default/objects/VS_ScenarioPlan__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <label>Corporate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>