force-app/main/default/objects/VS_ScenarioPlan__c/fields/DLocation__c.field-meta.xml
<CustomField>
    <fullName>DLocation__c</fullName>
    <label>D Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>zzz</fullName>
            </value>
            <value>
                <fullName>aaa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>