force-app/main/default/objects/VS_ScenarioPlan__c/fields/l_OpportunityItem__c.field-meta.xml
<CustomField>
    <fullName>l_OpportunityItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Item</label>
    <referenceTo>VS_OpportunityItem__c</referenceTo>
    <relationshipLabel>ScenarioPlans</relationshipLabel>
    <relationshipName>ScenarioPlans</relationshipName>
    <type>Lookup</type>
</CustomField>