force-app/main/default/objects/VS_ScenarioPlan__c/fields/l_ScenarioItem__c.field-meta.xml
<CustomField>
    <fullName>l_ScenarioItem__c</fullName>
    <label>ScenarioItem</label>
    <referenceTo>VS_ScenarioItem__c</referenceTo>
    <relationshipLabel>ScenarioPlans</relationshipLabel>
    <relationshipName>ScenarioPlans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>