force-app/main/default/objects/VS_ScenarioPlan__c/fields/ProductionType__c.field-meta.xml
<CustomField>
    <fullName>ProductionType__c</fullName>
    <label>Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaa</fullName>
            </value>
            <value>
                <fullName>bb</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>