force-app/main/default/objects/VS_ScenarioPlan__c/fields/yyyymm__c.field-meta.xml
<CustomField>
    <fullName>yyyymm__c</fullName>
    <label>yyyymm</label>
    <type>Date</type>
</CustomField>